# Hardware-RAG

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
config/: settings.py
docs/: architecture_doc.md
src/core/: bm25_cache.py  custom_embedding.py  custom_llm.py  custom_rag_chat.py  custom_reranker.py  hybrid_retriever.py  logger.py  model_factory.py  rag_pipeline.py  resource_manager.py
src/ingestion/: data_loader.py  index_builder.py
