[project]
name = "hardware-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "gradio>=5.49.1",
    "jieba>=0.42.1",
    "llama-index>=0.12.52",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-vector-stores-chroma>=0.4.2",
    "pandas>=2.3.3",
    "rank-bm25>=0.2.2",
    "streamlit>=1.52.1",
]

[tool.uv]
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone"

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
